fix: pantry page color incorrect in dark mode

--- a/global.css
+++ b/global.css
@@ -32,8 +32,8 @@
     --card-foreground: 0 0% 98%;
     --popover: 240 10% 3.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 349 57% 95%;
-    --primary-foreground: 12 100% 50%;
+    --primary: 12 100% 50%;
+    --primary-foreground: 349 57% 95%;
     --secondary: 240 3.7% 15.9%;
     --secondary-foreground: 0 0% 98%;
     --muted: 240 3.7% 15.9%;
